[gd_scene load_steps=8 format=2]

[ext_resource path="res://carts/abilities/ForceHold.gd" type="Script" id=1]
[ext_resource path="res://carts/models/ForceMagnet.gdshader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
resource_name = "electromagnetic_pulse"
shader = ExtResource( 2 )
shader_param/albedo = Color( 0.452788, 0.906332, 0.430721, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 0.5
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/smoothSize = 0.5

[sub_resource type="ArrayMesh" id=38]
resource_local_to_scene = true
resource_name = "cart_magnet_Cube001"
surfaces/0 = {
"aabb": AABB( -0.489392, -0.165256, -0.944406, 0.978784, 0.155551, 0.241241 ),
"array_data": PoolByteArray( 227, 147, 79, 190, 190, 56, 41, 190, 247, 204, 100, 191, 0, 129, 169, 63, 0, 0, 0, 60, 227, 147, 79, 190, 190, 56, 41, 190, 247, 204, 100, 191, 0, 129, 144, 63, 0, 60, 0, 60, 227, 147, 79, 190, 190, 56, 41, 190, 247, 204, 100, 191, 14, 0, 0, 1, 0, 59, 0, 59, 227, 147, 79, 190, 190, 56, 41, 190, 247, 204, 100, 191, 39, 0, 0, 1, 0, 59, 0, 48, 227, 147, 79, 190, 16, 255, 30, 188, 247, 204, 100, 191, 0, 127, 127, 70, 0, 0, 0, 48, 227, 147, 79, 190, 16, 255, 30, 188, 247, 204, 100, 191, 0, 127, 127, 83, 0, 60, 0, 48, 227, 147, 79, 190, 16, 255, 30, 188, 247, 204, 100, 191, 14, 0, 0, 1, 0, 48, 0, 59, 227, 147, 79, 190, 16, 255, 30, 188, 247, 204, 100, 191, 39, 0, 0, 1, 0, 48, 0, 48, 227, 198, 191, 190, 190, 56, 41, 190, 10, 66, 81, 191, 0, 129, 193, 63, 0, 0, 0, 60, 227, 198, 191, 190, 190, 56, 41, 190, 10, 66, 81, 191, 0, 129, 169, 63, 0, 60, 0, 60, 227, 198, 191, 190, 190, 56, 41, 190, 10, 66, 81, 191, 39, 0, 0, 1, 0, 59, 0, 59, 227, 198, 191, 190, 190, 56, 41, 190, 10, 66, 81, 191, 63, 0, 0, 1, 0, 59, 0, 48, 227, 198, 191, 190, 16, 255, 30, 188, 10, 66, 81, 191, 0, 127, 127, 83, 0, 0, 0, 48, 227, 198, 191, 190, 16, 255, 30, 188, 10, 66, 81, 191, 0, 127, 127, 95, 0, 60, 0, 48, 227, 198, 191, 190, 16, 255, 30, 188, 10, 66, 81, 191, 39, 0, 0, 1, 0, 48, 0, 59, 227, 198, 191, 190, 16, 255, 30, 188, 10, 66, 81, 191, 63, 0, 0, 1, 0, 48, 0, 48, 147, 145, 250, 190, 190, 56, 41, 190, 161, 2, 52, 191, 129, 0, 127, 127, 0, 59, 0, 0, 147, 145, 250, 190, 190, 56, 41, 190, 161, 2, 52, 191, 0, 129, 193, 63, 0, 60, 0, 60, 147, 145, 250, 190, 190, 56, 41, 190, 161, 2, 52, 191, 63, 0, 0, 1, 0, 59, 0, 59, 147, 145, 250, 190, 16, 255, 30, 188, 161, 2, 52, 191, 129, 0, 127, 127, 0, 59, 0, 60, 147, 145, 250, 190, 16, 255, 30, 188, 161, 2, 52, 191, 0, 127, 127, 95, 0, 0, 0, 48, 147, 145, 250, 190, 16, 255, 30, 188, 161, 2, 52, 191, 63, 0, 0, 1, 0, 48, 0, 59, 166, 145, 250, 62, 190, 56, 41, 190, 161, 2, 52, 191, 193, 0, 0, 1, 0, 59, 0, 48, 166, 145, 250, 62, 190, 56, 41, 190, 161, 2, 52, 191, 0, 129, 129, 95, 0, 0, 0, 60, 166, 145, 250, 62, 190, 56, 41, 190, 161, 2, 52, 191, 127, 0, 0, 1, 0, 48, 0, 60, 166, 145, 250, 62, 16, 255, 30, 188, 161, 2, 52, 191, 193, 0, 0, 1, 0, 48, 0, 48, 166, 145, 250, 62, 16, 255, 30, 188, 161, 2, 52, 191, 0, 127, 63, 63, 0, 60, 0, 48, 166, 145, 250, 62, 16, 255, 30, 188, 161, 2, 52, 191, 127, 0, 0, 1, 0, 0, 0, 60, 246, 198, 191, 62, 190, 56, 41, 190, 10, 66, 81, 191, 193, 0, 0, 1, 0, 59, 0, 59, 246, 198, 191, 62, 190, 56, 41, 190, 10, 66, 81, 191, 217, 0, 0, 1, 0, 59, 0, 48, 246, 198, 191, 62, 190, 56, 41, 190, 10, 66, 81, 191, 0, 129, 129, 83, 0, 0, 0, 60, 246, 198, 191, 62, 190, 56, 41, 190, 10, 66, 81, 191, 0, 129, 129, 95, 0, 60, 0, 60, 246, 198, 191, 62, 16, 255, 30, 188, 10, 66, 81, 191, 193, 0, 0, 1, 0, 48, 0, 59, 246, 198, 191, 62, 16, 255, 30, 188, 10, 66, 81, 191, 217, 0, 0, 1, 0, 48, 0, 48, 246, 198, 191, 62, 16, 255, 30, 188, 10, 66, 81, 191, 0, 127, 63, 63, 0, 0, 0, 48, 246, 198, 191, 62, 16, 255, 30, 188, 10, 66, 81, 191, 0, 127, 87, 63, 0, 60, 0, 48, 10, 148, 79, 62, 190, 56, 41, 190, 247, 204, 100, 191, 217, 0, 0, 1, 0, 59, 0, 59, 10, 148, 79, 62, 190, 56, 41, 190, 247, 204, 100, 191, 242, 0, 0, 1, 0, 59, 0, 48, 10, 148, 79, 62, 190, 56, 41, 190, 247, 204, 100, 191, 0, 129, 129, 70, 0, 0, 0, 60, 10, 148, 79, 62, 190, 56, 41, 190, 247, 204, 100, 191, 0, 129, 129, 83, 0, 60, 0, 60, 10, 148, 79, 62, 16, 255, 30, 188, 247, 204, 100, 191, 217, 0, 0, 1, 0, 48, 0, 59, 10, 148, 79, 62, 16, 255, 30, 188, 247, 204, 100, 191, 242, 0, 0, 1, 0, 48, 0, 48, 10, 148, 79, 62, 16, 255, 30, 188, 247, 204, 100, 191, 0, 127, 87, 63, 0, 0, 0, 48, 10, 148, 79, 62, 16, 255, 30, 188, 247, 204, 100, 191, 0, 127, 112, 63, 0, 60, 0, 48, 112, 12, 157, 52, 190, 56, 41, 190, 194, 169, 107, 191, 242, 0, 0, 1, 0, 59, 0, 59, 112, 12, 157, 52, 190, 56, 41, 190, 194, 169, 107, 191, 0, 129, 144, 63, 0, 0, 0, 60, 112, 12, 157, 52, 190, 56, 41, 190, 194, 169, 107, 191, 0, 129, 129, 70, 0, 60, 0, 60, 112, 12, 157, 52, 190, 56, 41, 190, 194, 169, 107, 191, 14, 0, 0, 1, 0, 59, 0, 48, 112, 12, 157, 52, 16, 255, 30, 188, 194, 169, 107, 191, 242, 0, 0, 1, 0, 48, 0, 59, 112, 12, 157, 52, 16, 255, 30, 188, 194, 169, 107, 191, 0, 127, 112, 63, 0, 0, 0, 48, 112, 12, 157, 52, 16, 255, 30, 188, 194, 169, 107, 191, 0, 127, 127, 70, 0, 60, 0, 48, 112, 12, 157, 52, 16, 255, 30, 188, 194, 169, 107, 191, 14, 0, 0, 1, 0, 48, 0, 48, 227, 147, 79, 190, 16, 255, 30, 188, 205, 231, 106, 191, 129, 87, 0, 1, 0, 48, 0, 59, 227, 147, 79, 190, 16, 255, 30, 188, 205, 231, 106, 191, 129, 112, 0, 1, 0, 48, 0, 48, 227, 147, 79, 190, 16, 255, 30, 188, 205, 231, 106, 191, 0, 127, 127, 70, 0, 0, 0, 0, 227, 147, 79, 190, 16, 255, 30, 188, 205, 231, 106, 191, 0, 127, 127, 83, 0, 60, 0, 0, 227, 198, 191, 190, 16, 255, 30, 188, 224, 92, 87, 191, 129, 63, 0, 1, 0, 48, 0, 59, 227, 198, 191, 190, 16, 255, 30, 188, 224, 92, 87, 191, 129, 87, 0, 1, 0, 48, 0, 48, 227, 198, 191, 190, 16, 255, 30, 188, 224, 92, 87, 191, 0, 127, 127, 83, 0, 0, 0, 0, 227, 198, 191, 190, 16, 255, 30, 188, 224, 92, 87, 191, 0, 127, 127, 95, 0, 60, 0, 0, 147, 145, 250, 190, 16, 255, 30, 188, 119, 29, 58, 191, 129, 0, 127, 127, 0, 60, 0, 60, 147, 145, 250, 190, 16, 255, 30, 188, 119, 29, 58, 191, 129, 63, 0, 1, 0, 48, 0, 48, 147, 145, 250, 190, 16, 255, 30, 188, 119, 29, 58, 191, 0, 127, 127, 95, 0, 0, 0, 0, 166, 145, 250, 62, 16, 255, 30, 188, 119, 29, 58, 191, 0, 127, 63, 63, 0, 60, 0, 0, 166, 145, 250, 62, 16, 255, 30, 188, 119, 29, 58, 191, 127, 63, 0, 1, 0, 48, 0, 59, 166, 145, 250, 62, 16, 255, 30, 188, 119, 29, 58, 191, 127, 0, 0, 1, 0, 0, 0, 0, 246, 198, 191, 62, 16, 255, 30, 188, 224, 92, 87, 191, 0, 127, 63, 63, 0, 0, 0, 0, 246, 198, 191, 62, 16, 255, 30, 188, 224, 92, 87, 191, 0, 127, 87, 63, 0, 60, 0, 0, 246, 198, 191, 62, 16, 255, 30, 188, 224, 92, 87, 191, 127, 87, 0, 1, 0, 48, 0, 59, 246, 198, 191, 62, 16, 255, 30, 188, 224, 92, 87, 191, 127, 63, 0, 1, 0, 48, 0, 48, 10, 148, 79, 62, 16, 255, 30, 188, 205, 231, 106, 191, 0, 127, 87, 63, 0, 0, 0, 0, 10, 148, 79, 62, 16, 255, 30, 188, 205, 231, 106, 191, 0, 127, 112, 63, 0, 60, 0, 0, 10, 148, 79, 62, 16, 255, 30, 188, 205, 231, 106, 191, 127, 112, 0, 1, 0, 48, 0, 59, 10, 148, 79, 62, 16, 255, 30, 188, 205, 231, 106, 191, 127, 87, 0, 1, 0, 48, 0, 48, 112, 12, 157, 52, 16, 255, 30, 188, 152, 196, 113, 191, 129, 112, 0, 1, 0, 48, 0, 59, 112, 12, 157, 52, 16, 255, 30, 188, 152, 196, 113, 191, 0, 127, 112, 63, 0, 0, 0, 0, 112, 12, 157, 52, 16, 255, 30, 188, 152, 196, 113, 191, 0, 127, 127, 70, 0, 60, 0, 0, 112, 12, 157, 52, 16, 255, 30, 188, 152, 196, 113, 191, 127, 112, 0, 1, 0, 48, 0, 48, 10, 148, 79, 62, 190, 56, 41, 190, 205, 231, 106, 191, 0, 129, 129, 70, 0, 0, 0, 59, 10, 148, 79, 62, 190, 56, 41, 190, 205, 231, 106, 191, 0, 129, 129, 83, 0, 60, 0, 59, 10, 148, 79, 62, 190, 56, 41, 190, 205, 231, 106, 191, 127, 112, 0, 1, 0, 59, 0, 59, 10, 148, 79, 62, 190, 56, 41, 190, 205, 231, 106, 191, 127, 87, 0, 1, 0, 59, 0, 48, 112, 12, 157, 52, 190, 56, 41, 190, 152, 196, 113, 191, 129, 112, 0, 1, 0, 59, 0, 59, 112, 12, 157, 52, 190, 56, 41, 190, 152, 196, 113, 191, 0, 129, 144, 63, 0, 0, 0, 59, 112, 12, 157, 52, 190, 56, 41, 190, 152, 196, 113, 191, 0, 129, 129, 70, 0, 60, 0, 59, 112, 12, 157, 52, 190, 56, 41, 190, 152, 196, 113, 191, 127, 112, 0, 1, 0, 59, 0, 48, 246, 198, 191, 62, 190, 56, 41, 190, 224, 92, 87, 191, 0, 129, 129, 83, 0, 0, 0, 59, 246, 198, 191, 62, 190, 56, 41, 190, 224, 92, 87, 191, 0, 129, 129, 95, 0, 60, 0, 59, 246, 198, 191, 62, 190, 56, 41, 190, 224, 92, 87, 191, 127, 87, 0, 1, 0, 59, 0, 59, 246, 198, 191, 62, 190, 56, 41, 190, 224, 92, 87, 191, 127, 63, 0, 1, 0, 59, 0, 48, 166, 145, 250, 62, 190, 56, 41, 190, 119, 29, 58, 191, 0, 129, 129, 95, 0, 0, 0, 59, 166, 145, 250, 62, 190, 56, 41, 190, 119, 29, 58, 191, 127, 63, 0, 1, 0, 59, 0, 59, 166, 145, 250, 62, 190, 56, 41, 190, 119, 29, 58, 191, 127, 0, 0, 1, 0, 48, 0, 0, 227, 198, 191, 190, 190, 56, 41, 190, 224, 92, 87, 191, 129, 63, 0, 1, 0, 59, 0, 59, 227, 198, 191, 190, 190, 56, 41, 190, 224, 92, 87, 191, 129, 87, 0, 1, 0, 59, 0, 48, 227, 198, 191, 190, 190, 56, 41, 190, 224, 92, 87, 191, 0, 129, 193, 63, 0, 0, 0, 59, 227, 198, 191, 190, 190, 56, 41, 190, 224, 92, 87, 191, 0, 129, 169, 63, 0, 60, 0, 59, 147, 145, 250, 190, 190, 56, 41, 190, 119, 29, 58, 191, 129, 0, 127, 127, 0, 60, 0, 0, 147, 145, 250, 190, 190, 56, 41, 190, 119, 29, 58, 191, 129, 63, 0, 1, 0, 59, 0, 48, 147, 145, 250, 190, 190, 56, 41, 190, 119, 29, 58, 191, 0, 129, 193, 63, 0, 60, 0, 59, 227, 147, 79, 190, 190, 56, 41, 190, 205, 231, 106, 191, 129, 87, 0, 1, 0, 59, 0, 59, 227, 147, 79, 190, 190, 56, 41, 190, 205, 231, 106, 191, 129, 112, 0, 1, 0, 59, 0, 48, 227, 147, 79, 190, 190, 56, 41, 190, 205, 231, 106, 191, 0, 129, 169, 63, 0, 0, 0, 59, 227, 147, 79, 190, 190, 56, 41, 190, 205, 231, 106, 191, 0, 129, 144, 63, 0, 60, 0, 59 ),
"array_index_data": PoolByteArray( 4, 0, 76, 0, 50, 0, 4, 0, 54, 0, 76, 0, 27, 0, 92, 0, 24, 0, 27, 0, 65, 0, 92, 0, 0, 0, 96, 0, 9, 0, 0, 0, 102, 0, 96, 0, 23, 0, 87, 0, 31, 0, 23, 0, 90, 0, 87, 0, 12, 0, 55, 0, 5, 0, 12, 0, 58, 0, 55, 0, 34, 0, 63, 0, 26, 0, 34, 0, 66, 0, 63, 0, 8, 0, 99, 0, 17, 0, 8, 0, 95, 0, 99, 0, 74, 0, 101, 0, 82, 0, 74, 0, 53, 0, 101, 0, 30, 0, 79, 0, 39, 0, 30, 0, 86, 0, 79, 0, 20, 0, 59, 0, 13, 0, 20, 0, 62, 0, 59, 0, 42, 0, 67, 0, 35, 0, 42, 0, 70, 0, 67, 0, 72, 0, 85, 0, 80, 0, 72, 0, 77, 0, 85, 0, 68, 0, 81, 0, 88, 0, 68, 0, 73, 0, 81, 0, 64, 0, 89, 0, 91, 0, 64, 0, 69, 0, 89, 0, 56, 0, 98, 0, 93, 0, 56, 0, 61, 0, 98, 0, 52, 0, 94, 0, 100, 0, 52, 0, 57, 0, 94, 0, 49, 0, 71, 0, 43, 0, 49, 0, 75, 0, 71, 0, 45, 0, 103, 0, 1, 0, 45, 0, 83, 0, 103, 0, 38, 0, 84, 0, 46, 0, 38, 0, 78, 0, 84, 0, 21, 0, 11, 0, 18, 0, 21, 0, 15, 0, 11, 0, 14, 0, 3, 0, 10, 0, 14, 0, 7, 0, 3, 0, 6, 0, 47, 0, 2, 0, 6, 0, 51, 0, 47, 0, 48, 0, 37, 0, 44, 0, 48, 0, 41, 0, 37, 0, 40, 0, 29, 0, 36, 0, 40, 0, 33, 0, 29, 0, 32, 0, 22, 0, 28, 0, 32, 0, 25, 0, 22, 0, 19, 0, 97, 0, 60, 0, 19, 0, 16, 0, 97, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 156,
"material": SubResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 104
}

[sub_resource type="ConvexPolygonShape" id=21]
points = PoolVector3Array( 0.491491, -0.00930586, -0.702906, -0.0165431, -0.164615, -0.942213, -0.0494011, -0.164478, -0.937868, 0.491491, -0.167422, -0.702906, -0.489087, -0.0097, -0.703537, 0.199179, -0.0115981, -0.918065, -0.491537, -0.167422, -0.702929, -0.211286, -0.011731, -0.913789, 0.360664, -0.165056, -0.847486, -0.360658, -0.165065, -0.847488, -0.384966, -0.0109606, -0.830979, 0.360664, -0.0116711, -0.847486, 0.199179, -0.165129, -0.918065, 0.0164064, -0.0121006, -0.942231, -0.199104, -0.165119, -0.918075, 0.481673, -0.0108851, -0.734694, -0.478347, -0.1653, -0.735324, -0.481662, -0.0108943, -0.734704, 0.4783, -0.1653, -0.735324, -0.199104, -0.0116089, -0.918075, -0.360658, -0.0116624, -0.847488, 0.0164064, -0.164627, -0.942231, -0.0165431, -0.0121123, -0.942213, -0.382644, -0.1653, -0.830941, 0.21129, -0.165015, -0.913787, -0.211286, -0.164997, -0.913789, 0.21129, -0.0117127, -0.913787 )

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Magnet:mesh:surface_1/material:shader_param/smoothSize")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=37]
resource_name = "pulsing"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Magnet:mesh:surface_1/material:shader_param/smoothSize")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="ForceMagnet" type="Spatial"]
script = ExtResource( 1 )

[node name="Magnet" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.226, 0.402 )
visible = false
mesh = SubResource( 38 )
material/0 = null

[node name="AreaMagnet" type="Area" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="AreaMagnet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22569, 0.402001 )
shape = SubResource( 21 )
disabled = true

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 36 )
anims/pulsing = SubResource( 37 )

[node name="CPU_ReleaseTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AreaMagnet" to="." method="_on_AreaMagnet_body_entered"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_HoldTimer_timeout"]
[connection signal="timeout" from="CPU_ReleaseTimer" to="." method="_on_CPU_ReleaseTimer_timeout"]
